src/css/styles.css
/* @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500'); */

@import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');


body p {
  overflow-x: hidden;
  /* font-family: 'Roboto', sans-serif; */
  font-family: 'Spartan', sans-serif;
  color: #CFD8DC;
  font-size: 16px;
  background-color: #379683;
  color: #CFD8DC;
  
}


/* Toggle Styles */

#viewport {
  padding-left: 250px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.container-fluid {
  /* background-color: #EFE2BA; */
  background-color: #379683;
}

#content {
  width: 100%;
  position: relative;
  margin-right: 0;
  
}

/* Sidebar Styles */

#sidebar {
  z-index: 1000;
  position: fixed;
  left: 250px;
  width: 250px;
  height: 97.2%;
  margin-left: -250px;
  overflow-y: auto;
  /* background: #37474F; */
  background: #37474F;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

#sidebar header {
  background-color: #263238;
  font-size: 20px;
  line-height: 52px;
  text-align: center;
}

#sidebar header a {
  color: #fff;
  display: block;
  text-decoration: none;
}

#sidebar header a:hover {
  color: #fff;
}

#sidebar .nav{
  
}

#sidebar .nav a{
  background: none;
  /* border-bottom: 1px solid #455A64; */
  color: #CFD8DC;
  font-size: 20px;
  padding: 16px 24px;
}

#sidebar .nav a:hover{
  background: none;
  color: #ECEFF1;
}

#sidebar .nav a i{
  margin-right: 16px;
}

.input-group {
  margin: 2em;
  margin-right: 2em;
}

.btn {
  justify-content: right;
}


.col {
  background-image: url('https://picsum.photos/100/150');
  background-repeat: no-repeat;
  margin: 2em;
  padding: 2em;
}

.btn {
  float: right;
}

div.carousel-inner {
  /* margin: 30px; */
  background-color: #ffffff;
  /* border: 1px solid black; */
  /* opacity: 0.4; */
  filter: alpha(opacity=40); /* For IE8 and earlier */
  z-index: 0;
  }

  .carousel-caption {
    position: absolute;
    font-size: 3em;
    z-index: 20;
    /* display:table;
    width:100%;
    height:100%; */
}

